2006-11-16  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail-ldap.config, debian/dbmail-sieve.config, 
	  debian/dbmail.config:
	fix typo
	* debian/changelog:
	update changelog for debian
	* imap4.c:
	fix for fatal sigpipe
	* serverchild.c:
	disable the O_NONBLOCK dance

2006-11-15  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, misc.c, test-scripts/testimap.py:
	fix for lsub (jonathan feally)
	* debian/dbmail.init:
	fix reload bug
	* server.c:
	bail out if drop_privileges fails
	* serverchild.c:
	remove confusing error message

2006-11-12  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/dbmail-ldap.config, debian/dbmail-mysql.config, 
	  debian/dbmail-pgsql.config, debian/dbmail-sieve.config, 
	  debian/dbmail-sieve.postinst, debian/dbmail-sieve.templates, 
	  debian/dbmail-sqlite.config:
	debconf fixes
	* debian/changelog, debian/dbmail-ldap.config, debian/dbmail-sieve.config, 
	  debian/dbmail.config:
	more debconf fixes
	* serverchild.c:
	reset flags on clientsocket after accept

2006-11-10  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_imapd.c, misc.c, misc.h, serverchild.c:
	some minor cleanups related to const char types and compiler warnings

2006-11-09  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-message.c:
	Always set charset=utf-8 in dbmail_construct_message (closes bug
	#429).
	* misc.c:
	Fixed an invalid test for invalid addresses in append_alist_as_plist
	(closes bug #444).

2006-11-09  Paul J Stevens <paul@nfg.nl>

	* serverchild.c:
	work on #437
	* db.c:
	only retrieve header for envelope reconstruction
	* dbmail-message.c:
	fix segfault
	* db.c:
	fix potential turnover
	* maintenance.c:
	reshuffle cache maintenance

2006-11-08  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	Revert result logic in sort_process.
	Corrected a for loop index typo (closes bug #441).

2006-11-07  Paul J Stevens <paul@nfg.nl>

	* db.c:
	make allocation fail louder in db_icheck_envelope
	* modules/sortsieve.c: